[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turbulence_statistics"
version = "1.0.0"
authors = [
    { name="Thijs Blom", email="matthijs.b.blom@gmail.com" },
]
description = "A package for computing various statistics on flow fields to quantify turbulence."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy ~= 1.24.3",
    "numba ~= 0.57.1",
    "meshio == 5.3.4"
]

[project.optional-dependencies]
dev = [
    "black ~= 23.3.0",
    "mypy ~= 1.3.0",
]

[[tool.mypy.overrides]]
module = "numba.*"
ignore_missing_imports = true
